<resources>
    <string name="app_name">TTCS_User</string>
    <string name="user_setting">User Setting</string>
    <string name="change_language">Change Language</string>
    <string name="rate_us_5_start">Rate Us 5 Start</string>
    <string name="log_out">Log Out</string>
    <string name="search">search</string>
    <string name="select_size">Select Size</string>
    <string name="add_to_bag">ADD TO BAG</string>
    <string name="you_might_also_like">You Might Also Like</string>
    <string name="product">Product</string>
    <string name="total">Total :</string>
    <string name="check_out">Check Out</string>
    <string name="use_name">Use Name</string>
    <string name="what_your_name">What Your Name ?</string>
    <string name="what_your_phone_number">What Your Phone Number?</string>
    <string name="phone_number">Phone Number</string>
    <string name="what_your_email">What Your Notification ?</string>
    <string name="my_notification">My Notification</string>
    <string name="what_is_your_dress">What is Your Dress</string>
    <string name="my_dress">My Dress</string>
    <string name="my_order">My Order</string>
    <string name="accept">Accept</string>
    <string name="history_buy">History Buy</string>
    <string name="accept_change">Accept Change</string>
</resources>