<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/ToolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/my_order" />

    <TextView
        android:id="@+id/TextName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20.68dp"
        android:text="@string/what_your_name"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.03"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ToolBar"
        app:layout_constraintVertical_bias="0" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:helperTextTextColor="#FF0000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TextName"
        app:layout_constraintVertical_bias="0">

        <EditText
            android:id="@+id/CheckName"
            android:layout_width="match_parent"
            android:layout_height="41.19dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/use_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.07"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TextName"
            app:layout_constraintVertical_bias="0" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/TextPhone"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20.68dp"
        android:text="@string/what_your_phone_number"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.03"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Name"
        app:layout_constraintVertical_bias="0.03" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:helperTextTextColor="#FF0000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TextPhone"
        app:layout_constraintVertical_bias="0">

        <EditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/phone_number"
            android:inputType="number"
            tools:ignore="TextFields" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/TextEmail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20.68dp"
        android:text="@string/what_your_email"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.03"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Phone"
        app:layout_constraintVertical_bias="0.03" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:helperTextTextColor="#FF0000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TextEmail"
        app:layout_constraintVertical_bias="0">

        <EditText
            android:id="@+id/InputEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/my_notification"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.07"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TextEmail"
            app:layout_constraintVertical_bias="0" />


    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/TextPassWord"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20.68dp"
        android:text="@string/what_is_your_dress"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.03"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Email"
        app:layout_constraintVertical_bias="0.03" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:helperTextTextColor="#FF0000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TextPassWord"
        app:layout_constraintVertical_bias="0">

        <EditText
            android:id="@+id/InputPassWord"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/my_dress"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.07"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TextPassWord"
            app:layout_constraintVertical_bias="0" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/Total"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:background="@drawable/border"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address"
        app:layout_constraintVertical_bias="0.288" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/check"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/black"
        android:gravity="center"
        android:text="@string/accept"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Total"
        app:layout_constraintWidth_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>

