<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_mainStream">


    <androidx.core.widget.NestedScrollView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/color_mainStream"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.95"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:background="#FFFFFF">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0" />

            <TextView
                android:id="@+id/titleToolBar"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="25dp"
                android:gravity="start|center"
                android:text="@string/user_setting"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/toolBar"
                app:layout_constraintLeft_toLeftOf="@id/toolBar"
                app:layout_constraintRight_toRightOf="@id/toolBar"
                app:layout_constraintTop_toTopOf="@id/toolBar" />


            <Button
                android:id="@+id/btn_upgrade_account"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="#00FFFFFF"
                android:elevation="5dp"
                android:scaleType="fitCenter"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolBar" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/viewUpdate"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/background_login"
                android:elevation="1dp"
                android:scaleType="fitCenter"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolBar">

                <ImageView
                    android:id="@+id/avt_account"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.1"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"

                    />

                <TextView
                    android:id="@+id/user_name_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:gravity="center|start"
                    android:text="User Name"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintLeft_toRightOf="@id/avt_account"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.25" />


                <TextView
                    android:id="@+id/user_gmail_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:gravity="center|start"
                    android:text="Email"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintLeft_toRightOf="@id/avt_account"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/user_name_account"
                    app:layout_constraintVertical_bias="0.25" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <ImageView
                android:id="@+id/background_user_premium"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:elevation="1dp"
                android:scaleType="fitCenter"
                android:src="@drawable/background_account"
                android:visibility="visible"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolBar" />


            <Button
                android:id="@+id/btn_language"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:background="#00000000"
                android:elevation="5dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_upgrade_account"

                />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:elevation="1dp"
                android:src="@drawable/icon_language"
                app:layout_constraintBottom_toBottomOf="@+id/btn_language"
                app:layout_constraintLeft_toLeftOf="@+id/btn_language"
                app:layout_constraintRight_toRightOf="@+id/btn_language"
                app:layout_constraintTop_toTopOf="@+id/btn_language"

                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="40dp"
                android:elevation="2dp"
                android:fontFamily="@font/montserrat_semibold"
                android:gravity="center|start"
                android:src="@drawable/icon_language"
                android:text="@string/change_language"
                android:textColor="#000000"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/btn_language"
                app:layout_constraintHeight_percent="0.1"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintLeft_toLeftOf="@+id/btn_language"
                app:layout_constraintRight_toRightOf="@+id/btn_language"
                app:layout_constraintTop_toTopOf="@+id/btn_language"
                app:layout_constraintVertical_bias="0.5"
                app:layout_constraintWidth_percent="0.7"

                />



            <Button
                android:id="@+id/btnFeedBack"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:background="#00000000"
                android:elevation="2dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_language" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:elevation="1dp"
                android:src="@drawable/icon_terms_of_service"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_language" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="40dp"
                android:elevation="2dp"
                android:fontFamily="@font/montserrat_semibold"
                android:gravity="center|start"
                android:text="FeedBack For Shop"
                android:textColor="#000000"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/btnFeedBack"
                app:layout_constraintHeight_percent="0.1"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintLeft_toLeftOf="@+id/btnFeedBack"
                app:layout_constraintRight_toRightOf="@+id/btnFeedBack"
                app:layout_constraintTop_toTopOf="@+id/btnFeedBack"
                app:layout_constraintVertical_bias="0.5"
                app:layout_constraintWidth_percent="0.7" />


            <Button
                android:id="@+id/rate_us"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:background="#00000000"
                android:elevation="5dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnFeedBack" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:elevation="1dp"
                android:src="@drawable/icon_rate_us"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnFeedBack" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="40dp"
                android:elevation="2dp"
                android:fontFamily="@font/montserrat_semibold"
                android:gravity="center|start"
                android:text="@string/rate_us_5_start"
                android:textColor="#000000"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/rate_us"
                app:layout_constraintHeight_percent="0.1"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintLeft_toLeftOf="@+id/rate_us"
                app:layout_constraintRight_toRightOf="@+id/rate_us"
                app:layout_constraintTop_toTopOf="@+id/rate_us"
                app:layout_constraintVertical_bias="0.5"
                app:layout_constraintWidth_percent="0.5" />


            <Button
                android:id="@+id/log_out"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:background="#00000000"
                android:elevation="2dp"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rate_us" />


            <ImageView
                android:id="@+id/image_logout"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:background="#00000000"
                android:elevation="2dp"
                android:src="@drawable/log_out"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rate_us" />

            <TextView
                android:id="@+id/textLogOut"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="40dp"
                android:elevation="2dp"
                android:fontFamily="@font/montserrat_semibold"
                android:gravity="center|start"
                android:text="@string/log_out"
                android:textColor="#DD2C00"
                android:textSize="16sp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/log_out"
                app:layout_constraintHeight_percent="0.1"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintLeft_toLeftOf="@+id/log_out"
                app:layout_constraintRight_toRightOf="@+id/log_out"
                app:layout_constraintTop_toTopOf="@+id/log_out"
                app:layout_constraintVertical_bias="0.5"
                app:layout_constraintWidth_percent="0.4" />



        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>